fix(reportModel): #EVAL-174 fixed warning message shift cancel button

--- a/src/main/resources/public/sass/global/specifics/_competences.scss
+++ b/src/main/resources/public/sass/global/specifics/_competences.scss
@@ -3504,6 +3504,13 @@ body.evaluations {
     }
   }
 
+  .lightbox-reportmodel {
+    .warning {
+      width: 61%;
+      display: inline-block;
+    }
+  }
+
 }
 
 
